--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -96,6 +96,13 @@
 	right: -10px;
 	position: relative;
 	z-index: 5;
+	@include media-breakpoint-only(md) {
+		position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 122px;
+    left: auto;
+	}
 }
 .output-col{
 	background-color: #ededed;
@@ -616,14 +623,20 @@ svg text.label {
 }
 
 .map-title {
-    position: relative;
     text-align: center;
     z-index: 3;
-    top: -28px;
     color: #585858;
     font-size: 16px;
+    padding: 7px;
+    position: absolute;
+    top: -27px;
+    left: 20px;
+    background: #eee;
+    width: 100%;
+    @include media-breakpoint-only(md) {
+				text-align: left;
+    }
 }
-
 text.rbc-center-text {
     font-weight: 500;
 }
@@ -640,9 +653,19 @@ text.rbc-center-text {
 .map-hint {
     opacity:1;
     transition:opacity 500ms;
+    position: absolute;
+    top: -5px;
+    left: 0;
+    background: #ededed;
+    width: 100%;
+    opacity: 1;
+    padding: 20px 0 0 0;
+    display: block;
 }
 .map-hint.slowhide {
     opacity:0;
+    height: 0;
+    display: none;
 }
 
 .col-map {
@@ -656,3 +679,5 @@ text.rbc-center-text {
 		padding-top: 20px;
 	}
 }
+
+
