--- a/public/scss/dashboard.scss
+++ b/public/scss/dashboard.scss
@@ -383,14 +383,14 @@
 }
 #maternal-health, #child-health{
 	font-size: 10px !important;
-  width: 100%;
-  max-width: 285px; 
-  margin: 7px auto;
-  position: relative;
-  @media(min-height: 900px){
+	width: 100%;
+	max-width: 285px; 
+	margin: 7px auto;
+	position: relative;
+	@media(min-height: 900px){
 		margin-top: 5px;
 		margin-bottom: 15px;
-  }
+	}
 }
 #maternal-health:before, #child-health:before{
   background: url('../images/maternal.png') no-repeat center bottom;
@@ -435,6 +435,29 @@
   background-size: contain;
   background-position: center bottom;
 }
+/* ie fixes */
+html.ie10-11{
+	#maternal-health, #child-health{
+		height: 280px;
+		@media(min-height: 900px){
+		
+		}
+		@media(min-width: 576px){
+			height: 230px;
+		}
+		@media(min-width: 768px){
+			height: 175px;
+		}
+		@media(min-width: 992px){
+			height: 290px;
+		}
+		@media(min-width: 1200px){
+			height: 360px;
+		}
+	}
+
+}
+
 div#zoomctrl div{
 	background-color: transparent !important;
 }
